Fixed previous commit to work on Android API < 19

--- a/src/main/res/layout/mpris_control.xml
+++ b/src/main/res/layout/mpris_control.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -32,7 +33,7 @@
     <org.kde.kdeconnect.UserInterface.MaxWidthImageButton
         android:layout_width="fill_parent"
         android:layout_height="75dip"
-        android:maxWidth="300dip"
+        app:maxWidth="300dip"
         android:id="@+id/play_button"
         android:src="@android:drawable/ic_media_play"
         android:contentDescription="@string/mpris_play"
